= TuleapWikiFarm 1.1.4 =

This is a security and maintenance release of the TuleapWikiFarm 1.1 branch.

= TuleapWikiFarm 1.1.3 =

This is a security and maintenance release of the TuleapWikiFarm 1.1 branch.

=== Changes since TuleapWikiFarm 1.1.2 ===

* (Tuleap#30730) Fix error on creating a new instance

=== Changes since TuleapWikiFarm 1.1.2 ===
* Localisation updates.

= TuleapWikiFarm 1.1.2 =

This is a security and maintenance release of the TuleapWikiFarm 1.1 branch.

=== Changes since TuleapWikiFarm 1.1.1 ===
* Localisation updates.
* (Tuleap#29988) Use different approarch when terminating sessions for all users

= TuleapWikiFarm 1.1.1 =

This is a security and maintenance release of the TuleapWikiFarm 1.1 branch.

=== Changes since TuleapWikiFarm 1.1.0 ===
* Localisation updates.
* Get content of Main_Page from `tuleap/plugins/mediawiki_standalone`
* Remove `Installer::overrideConfig` from `instanceInstaller`

= TuleapWikiFarm 1.1.0 =

This is a minor level release of the TuleapWikiFarm 1.0 branch.

It introduces a new CLI installer that supports installation on databases that require TLS.

=== Changes since TuleapWikiFarm 1.0.1 ===
* Localisation updates.
* (Tuleap#27189) Add SSL enabled installer

= TuleapWikiFarm 1.0.1 =

This is a security and maintenance release of the TuleapWikiFarm 1.0 branch.

=== Changes since TuleapWikiFarm 1.0.0 ===
* Localisation updates.
* (Tuleap#28297) Add default "Main_Page" to farm instance installer

= TuleapWikiFarm 1.0.0 =

This is the initial release